# Scanner2

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  api.py  api_v1.py  auth.py  dashboard.py  demo_mode.py  docker-compose.yml  download_weights.py  lambda_handler.py  model.py  preprocessing.py  pyproject.toml  pytest.ini  requirements.txt  test_run.py  train.py  worker.py
.github/workflows/: ci.yml
config/: __init__.py  settings.py
core/: __init__.py  adversarial.py  alignment_core.py  artifact_core.py  audio_analyzer.py  biosignal_core.py  exceptions.py  forensic_types.py  frequency_analyzer.py  fusion_engine.py  gaze_analyzer.py  input_sanity_guard.py  logging_config.py  text_core.py  threat_registry.py  weight_manager.py
detectors/: __init__.py  base.py  registry.py
docs/: api.md  architecture.md  benchmarks.md  changelog.md  deployment.md  index.md  installation.md  mkdocs.yml  product-overview.md  security.md
pentashield/: __init__.py
preprocessing/: __init__.py  quality_adapter.py
scripts/: benchmark.py
services/: __init__.py  analysis_service.py  history_service.py  report_service.py  video_profiler.py
tests/: __init__.py  conftest.py  test_adversarial.py  test_alignment_core.py  test_analysis_service.py  test_api_endpoints.py  test_api_integration.py  test_artifact_core.py  test_audio_analyzer.py  test_audit_logger.py  test_biosignal_core.py  test_detector_adapters.py  test_detector_base.py  test_exceptions.py  test_forensic_hash.py  test_forensic_reporter.py  test_forensic_types.py  test_fusion_engine.py  test_fusion_modules.py  test_history_manager.py  test_input_sanity_guard.py  test_model_manager.py  test_text_core.py  test_verdict_ledger.py  test_weight_manager.py
utils/: __init__.py  audit_logger.py  forensic_hash.py  forensic_reporter.py  heatmap_renderer.py  history_manager.py  metrics.py  model_manager.py  storage_manager.py  verdict_ledger.py  webhook_manager.py
(+22 files in other folders)
